--- a/css/style.css
+++ b/css/style.css
@@ -802,11 +802,15 @@ h4 {
         display: none;
     }
 }
-.mapa{
-    font-size: 20px;
-
-}
 
 .imagenPpal{
 border-radius: 15px;
 }
+
+#!/bin/sh
+git push origin master
+ssh root@lamp-s-1vcpu-1gb-nyc1-01 'bash -s' < deploy.sh
+
+#!/bin/sh
+cd ../var/www/html/gescob
+git pull origin master
