--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ h4 {
     width: 800px;
 }
 
+
 /*=======================================================
 			ABOUT:
 ========================================================*/
@@ -801,4 +802,9 @@ h4 {
     #video-popup .video-box .waves-block {
         display: none;
     }
+}
+.images{
+    height: 110px;
+    /* width: 219px; */
+    
 }
