--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h4 {
 }
 
 .navbar .navbar-collapse {
-    padding: 30px 0 0 0;
+    padding: 0;
 }
 
 .navbar .navbar-nav .nav-link {
@@ -224,7 +224,7 @@ h4 {
 }
 
 .navbar-light .navbar-collapse {
-    padding: 25px 0 0 0;
+    padding: 0;
 }
 
 .navbar-light .navbar-brand:hover {
@@ -800,6 +800,10 @@ h4 {
 #contact p {
     text-align: center;
 }
+#contact a.link {
+    color: white;
+    text-decoration: none;
+}
 
 /*=======================================================
 			MEDIA QUERIES:
@@ -853,7 +857,7 @@ border-radius: 15px;
 }
 
 .price-table li {
-    text-align: center;
+    text-align: left;
     padding-left: 1.5em;
     padding-top: .2em;
 }
